Few minor changes in CD 2

--- a/Documents/CD/index.html
+++ b/Documents/CD/index.html
@@ -5,6 +5,10 @@
 
     <body>
         <h1>Odkazy</h1>
+        <a href="./abstract/abstract.html">Krátký abstrakt</a><br />
+        <a href="./abstract/RabstractAJ.html">Extended abstract in english</a><br />
+        <a href="./abstract/RabstractCZ.html">Rozšíøený abstrakt v èeském jazyce</a><br />
+        <br />
         <a href="./text/sirljan-thesis-2012.pdf">Vlastní text Bakaláøské práce</a><br />
         <br />
         <a href="./src/Ruby-ACL">Zdrojové soubory Ruby-ACL</a><br />
