Finalized v1. src latex files moved to CD

--- a/Documents/CD/index.html
+++ b/Documents/CD/index.html
@@ -41,7 +41,7 @@
             Dalším zpùsobem, jak pouívat knihovnu s rozhraním je, stáhnout si zdrojové kódy buï z CD nebo z githubu. Zdrojové kódy se nachází na githubu. Zdrojové kódy pro Ruby-ACL jsou <a href="https://github.com/sirljan/Ruby-ACL">zde</a> a zdrojové kódy eXistAPI jsou <a href="https://github.com/sirljan/eXistAPI">zde</a>. V pøípadì staení kódu z githubu je dùleité pouít pøíkaz "require" se správnou adresou ke zdrojovım souborùm. 
         </p>
         <p>
-            Poznámka: Vıchozí adresy, ze kterıch require vkládá soubory, jsou aktuální adresáø a adresáø, kde se ukládají gem. Proto, kdy si gem nainstalujete pøes rubygem, není potøeba øešit adresy, staèí pouít pøíkazy "require 'Ruby-AL'" a "require 'eXistAPI'".
+            Poznámka: Vıchozí adresy, ze kterıch require vkládá soubory, jsou aktuální adresáø a adresáø, kde se ukládají gem. Proto, kdy si gem nainstalujete pøes rubygem, není potøeba øešit adresy, staèí pouít pøíkazy "require 'Ruby-ACL'" a "require 'eXistAPI'".
         </p>
         <p>
             Pøed pouitím spuste eXist-db. Funkènost mùete ovìøit tøeba v irb (Interactive Ruby Shell) zavoláním pøíkazù:
